[package]
name = "crowd_funding"
version = "0.1.0"
description = "Crowdfunding Program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowd_funding"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
solana-program = "1.7"
thiserror = "1.0"
# math = {path = "../../../libraries/math"}
static_assertions = "1.1.0"
